; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_dump/extr_pg_dumpall.c_buildShSecLabels.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_dump/extr_pg_dumpall.c_buildShSecLabels.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32, i8*, i8*, %struct.TYPE_7__*)* @buildShSecLabels to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @buildShSecLabels(i32* %0, i8* %1, i32 %2, i8* %3, i8* %4, %struct.TYPE_7__* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca %struct.TYPE_7__*, align 8
  %13 = alloca %struct.TYPE_7__*, align 8
  %14 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store %struct.TYPE_7__* %5, %struct.TYPE_7__** %12, align 8
  %15 = call %struct.TYPE_7__* (...) @createPQExpBuffer()
  store %struct.TYPE_7__* %15, %struct.TYPE_7__** %13, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = load i32, i32* %9, align 4
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %20 = call i32 @buildShSecLabelQuery(i32* %16, i8* %17, i32 %18, %struct.TYPE_7__* %19)
  %21 = load i32*, i32** %7, align 8
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32* @executeQuery(i32* %21, i32 %24)
  store i32* %25, i32** %14, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = load i32*, i32** %14, align 8
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %29 = load i8*, i8** %10, align 8
  %30 = load i8*, i8** %11, align 8
  %31 = call i32 @emitShSecLabels(i32* %26, i32* %27, %struct.TYPE_7__* %28, i8* %29, i8* %30)
  %32 = load i32*, i32** %14, align 8
  %33 = call i32 @PQclear(i32* %32)
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %35 = call i32 @destroyPQExpBuffer(%struct.TYPE_7__* %34)
  ret void
}

declare dso_local %struct.TYPE_7__* @createPQExpBuffer(...) #1

declare dso_local i32 @buildShSecLabelQuery(i32*, i8*, i32, %struct.TYPE_7__*) #1

declare dso_local i32* @executeQuery(i32*, i32) #1

declare dso_local i32 @emitShSecLabels(i32*, i32*, %struct.TYPE_7__*, i8*, i8*) #1

declare dso_local i32 @PQclear(i32*) #1

declare dso_local i32 @destroyPQExpBuffer(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
